--- a/index.html
+++ b/index.html
@@ -1,8 +1,431 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<title>Sajjan Puri</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>S.P Goswami | Premium Kangen Water Distributor</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-Updating...
+    <!-- Header -->
+    <header>
+        <div class="container header-container">
+            <div class="logo">
+                <i class="fas fa-tint"></i>
+                <h1>S.P <span>Goswami</span></h1>
+            </div>
+            <div class="mobile-toggle" id="mobile-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
+            <nav id="nav">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero" id="home">
+        <div class="container hero-content">
+            <h1 class="auto_type_container" data="Transform Your Water™ | Transform Your Health®
+                        $$Experience the Power of Alkaline, Antioxidant Water
+                        $$Your Home's Fountain of Health: Kangen Water®
+                        $$Hydrate Smarter. Live Better. Kangen Water®.
+                        $$Discover the Secret to Better Hydration & Wellness
+                        $$Say Goodbye to Bottled Water. Hello to Kangen!®
+                        $$Cleaner, Healthier Water Straight from Your Tap
+                        $$The Ultimate Solution for Your Family's Water
+                        $$Schedule Your FREE Water Demo Today!
+                        $$Learn How Kangen Water® Can Benefit You!
+                        $$Visit My Website for More Info & Testimonials"></h1>
+            <p>Premium Kangen Water® Systems for Healthier Living</p>
+            <div class="hero-btns">
+                <a href="#products" class="btn">Explore Products</a>
+                <a href="#contact" class="btn btn-secondary">Schedule Demo</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="about" id="about">
+        <div class="container">
+            <div class="section-title">
+                <h2>About Kangen Water</h2>
+                <p>Discover the revolutionary water technology that's changing lives around the world</p>
+            </div>
+
+            <div class="about-content">
+                <div class="about-text">
+                    <h3>What is Kangen Water?</h3>
+                    <p>Kangen Water® (Japanese for "return to origin") is alkaline, ionized water produced by Enagic's
+                        innovative water ionization technology. This process transforms ordinary tap water into healthy,
+                        antioxidant-rich drinking water.</p>
+                    <p>Our systems produce five types of water with different pH levels, each with specific benefits for
+                        drinking, cooking, beauty, and cleaning.</p>
+                    <p>As certified distributors, we're passionate about helping people experience the life-changing
+                        benefits of Kangen Water®.</p>
+                    <a href="https://kangenwater.in/" class="btn" target="_blank">Learn More</a>
+                </div>
+                <img src="assests/water.png" alt="Kangen Water Machine" class="about-image">
+            </div>
+
+            <div class="features">
+                <div class="feature-card">
+                    <i class="fas fa-heartbeat"></i>
+                    <h3>Health Benefits</h3>
+                    <p>Antioxidant-rich alkaline water helps neutralize free radicals and promote better hydration.</p>
+                </div>
+                <div class="feature-card">
+                    <i class="fas fa-leaf"></i>
+                    <h3>Eco-Friendly</h3>
+                    <p>Reduce plastic waste by eliminating the need for bottled water. Good for you and the planet.</p>
+                </div>
+                <div class="feature-card">
+                    <i class="fas fa-money-bill-wave"></i>
+                    <h3>Cost Effective</h3>
+                    <p>Save thousands by replacing expensive bottled water with unlimited Kangen Water® at home.</p>
+                </div>
+                <div class="feature-card">
+                    <i class="fas fa-certificate"></i>
+                    <h3>Medical Grade</h3>
+                    <p>Our systems are certified medical devices in Japan and meet rigorous quality standards.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Products Section -->
+    <section class="products" id="products">
+        <div class="container">
+            <div class="section-title">
+                <h2>Our Products</h2>
+                <p>Complete range of Kangen Water® systems and accessories</p>
+            </div>
+
+            <div class="products-container">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assests/K8.jpg" alt="K8 System">
+                    </div>
+                    <div class="product-info">
+                        <h3>Kangen K8</h3>
+                        <p>The flagship model with 8 platinum-coated titanium plates</p>
+                        <ul>
+                            <li>Produces 5 types of functional water</li>
+                            <li>8 electrode plates for maximum performance</li>
+                            <li>Digital touch screen display</li>
+                            <li>Automatic cleaning system</li>
+                        </ul>
+                        <a href="#contact" class="btn">Inquire Now</a>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assests/SD501.jpg" alt="SD501 System">
+                    </div>
+                    <div class="product-info">
+                        <h3>Kangen SD501</h3>
+                        <p>The most popular model with 7 platinum-coated titanium plates</p>
+                        <ul>
+                            <li>Produces 5 types of functional water</li>
+                            <li>7 electrode plates for superior performance</li>
+                            <li>Durable design with 20+ year lifespan</li>
+                            <li>Perfect for families of 3-5</li>
+                        </ul>
+                        <a href="#contact" class="btn">Inquire Now</a>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assests/JRIV.png" alt="JRIV System">
+                    </div>
+                    <div class="product-info">
+                        <h3>Kangen JRIV</h3>
+                        <p>Compact model ideal for smaller households</p>
+                        <ul>
+                            <li>Produces 4 types of functional water</li>
+                            <li>4 electrode plates</li>
+                            <li>Space-saving design</li>
+                            <li>Ideal for 1-2 people</li>
+                        </ul>
+                        <a href="#contact" class="btn">Inquire Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Additional Products -->
+            <div class="products-container">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assests/Super501.jpg" alt="Super 501 System">
+                    </div>
+                    <div class="product-info">
+                        <h3>Kangen Super 501</h3>
+                        <p>Professional-grade system for larger families</p>
+                        <ul>
+                            <li>Produces 5 types of functional water</li>
+                            <li>7 larger electrode plates</li>
+                            <li>Higher flow rate</li>
+                            <li>Ideal for families of 5+</li>
+                        </ul>
+                        <a href="#contact" class="btn">Inquire Now</a>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assests/AnespaDX.jpg" alt="Anespa System">
+                    </div>
+                    <div class="product-info">
+                        <h3>Anespa DX</h3>
+                        <p>Beauty and spa water system</p>
+                        <ul>
+                            <li>Produces acidic water for skin and hair</li>
+                            <li>Built-in shower head</li>
+                            <li>Beautifies skin and hair</li>
+                            <li>Helps with skin conditions</li>
+                        </ul>
+                        <a href="#contact" class="btn">Inquire Now</a>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assests/K8-Platinum.jpg" alt="K8 Platinum System">
+                    </div>
+                    <div class="product-info">
+                        <h3>Kangen K8 Platinum</h3>
+                        <p>Premium model with enhanced features</p>
+                        <ul>
+                            <li>8 platinum-coated titanium plates</li>
+                            <li>Enhanced filtration system</li>
+                            <li>Smart monitoring capabilities</li>
+                            <li>Voice control integration</li>
+                        </ul>
+                        <a href="#contact" class="btn">Inquire Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact" id="contact">
+        <div class="container">
+            <div class="section-title">
+                <h2>Contact Us</h2>
+                <p>Get in touch to schedule a demonstration or ask questions</p>
+            </div>
+
+            <div class="contact-container">
+                <div class="contact-info">
+                    <h3>Contact Information</h3>
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <div>
+                            <h4>Our Location</h4>
+                            <p>27, shilalekh complex<br>Parvat Patia, Surat</p>
+                        </div>
+                    </div>
+
+                    <div class="contact-item">
+                        <i class="fas fa-phone-alt"></i>
+                        <div>
+                            <h4>Phone Number</h4>
+                            <p>+91 9725298231</p>
+                            <p>+91 9726230201</p>
+                        </div>
+                    </div>
+
+                    <div class="contact-item">
+                        <i class="fas fa-envelope"></i>
+                        <div>
+                            <h4>Email Address</h4>
+                            <p>sajjanpurign@gmail.com</p>
+                        </div>
+                    </div>
+
+                    <div class="contact-item">
+                        <i class="fas fa-clock"></i>
+                        <div>
+                            <h4>Business Hours</h4>
+                            <p>24/7 Services Available</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="contact-form">
+                    <h3>Send Us a Message</h3>
+                    <form action="https://formsubmit.co/mayurgoswamimcpe3@gmail.com" method="POST">
+                        <div class="form-group">
+                            <label for="name">Full Name</label>
+                            <input type="text" name="name" id="name" placeholder="Your Name" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="email">Email Address</label>
+                            <input type="email" name="email" id="email" placeholder="Your Email" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="phone">Phone Number</label>
+                            <input type="tel" name="phone" id="phone" placeholder="Your Phone">
+                        </div>
+
+                        <!-- Prevent spam -->
+                        <input type="hidden" name="_captcha" value="false">
+
+                        <!-- Redirect back to home -->
+                        <input type="hidden" name="_next" value="http://localhost:5500">
+
+                        <div class="form-group">
+                            <label for="product">Product Interest</label>
+                            <select id="product" name="product" required>
+                                <option value="">Select a Product</option>
+                                <option value="k8">Kangen K8</option>
+                                <option value="sd501">Kangen SD501</option>
+                                <option value="jr4">Kangen JRIV</option>
+                                <option value="super501">Kangen Super 501</option>
+                                <option value="anespa">Anespa DX</option>
+                                <option value="k8p">Kangen K8 Platinum</option>
+                                <option value="notsure">Not Sure - Need Guidance</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea name="message" id="message" placeholder="How can we help you?"
+                                required></textarea>
+                        </div>
+
+                        <button type="submit" class="btn">Send Message</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-container">
+                <div class="footer-col">
+                    <h3>S.P Goswami <br>Independent Distributors</h3>
+                    <p>Your trusted source for premium Kangen Water® systems. Helping families achieve better health
+                        through innovative water technology since 2010.</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+
+                <div class="footer-col">
+                    <h3>Quick Links</h3>
+                    <ul class="footer-links">
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About Kangen Water</a></li>
+                        <li><a href="#products">Products</a></li>
+                        <li><a href="#contact">Contact Us</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-col">
+                    <h3>Products</h3>
+                    <ul class="footer-links">
+                        <li><a href="https://kangenwater.in/machines/k8" target="_blank">Kangen K8</a></li>
+                        <li><a href="https://kangenwater.in/machines/sd-501" target="_blank">Kangen SD501</a></li>
+                        <li><a href="https://kangenwater.in/machines/jr4" target="_blank">Kangen JRIV</a></li>
+                        <li><a href="https://kangenwater.in/machines/super-501" target="_blank">Kangen Super 501</a></li>
+                        <li><a href="https://kangenwater.in/machines/anespa-dx" target="_blank">Anespa DX</a></li>
+                        <li><a href="https://kangenwater.in/machines/sd-501-platinum" target="_blank">Kangen K8 Platinum</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="copyright">
+                <p>&copy; 2023 S.P Goswami. All rights reserved. Enagic® and Kangen Water® are registered
+                    trademarks of Enagic Co., Ltd.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script>
+        // Mobile Navigation Toggle
+        const mobileToggle = document.getElementById('mobile-toggle');
+        const nav = document.getElementById('nav');
+
+        mobileToggle.addEventListener('click', () => {
+            nav.classList.toggle('active');
+        });
+
+        // Smooth Scrolling for Anchor Links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+
+                const targetId = this.getAttribute('href');
+                const targetElement = document.querySelector(targetId);
+
+                if (targetElement) {
+                    // Close mobile menu if open
+                    nav.classList.remove('active');
+
+                    window.scrollTo({
+                        top: targetElement.offsetTop - 80,
+                        behavior: 'smooth'
+                    });
+                }
+            });
+        });
+
+        const typing_div = document.querySelector('.auto_type_container');
+        const taglines_list = typing_div.getAttribute('data').split('$$').map(t => t.trim());
+        let index = 0;
+
+        function sleep(ms) {
+            return new Promise(resolve => setTimeout(resolve, ms));
+        }
+
+        async function typeText(text) {
+            typing_div.innerHTML = '';
+            for (let i = 0; i < text.length; i++) {
+                typing_div.innerHTML += text[i];
+                await sleep(80); // Typing speed
+            }
+        }
+
+        async function deleteText() {
+            let current = typing_div.innerHTML;
+            for (let i = current.length; i > 0; i--) {
+                typing_div.innerHTML = current.slice(0, i - 1);
+                await sleep(50); // Deleting speed
+            }
+        }
+
+        async function loopTaglines() {
+            while (true) {
+                const text = taglines_list[index];
+                await typeText(text);
+                await sleep(2000); // Pause after typing
+                await deleteText();
+                await sleep(500); // Pause after deleting
+                index = (index + 1) % taglines_list.length;
+            }
+        }
+
+        loopTaglines();
+    </script>
 </body>
+
 </html>
