--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
                 <div class="contact-form">
                     <h3>Send Us a Message</h3>
-                    <form action="https://formsubmit.co/mayurgoswamimcpe3@gmail.com" method="POST">
+                    <form action="https://formsubmit.co/sajjanpurign@gmail.com" method="POST">
                         <div class="form-group">
                             <label for="name">Full Name</label>
                             <input type="text" name="name" id="name" placeholder="Your Name" required>
@@ -321,7 +321,7 @@
                 <div class="footer-col">
                     <h3>S.P Goswami <br>Independent Distributors</h3>
                     <p>Your trusted source for premium Kangen Water® systems. Helping families achieve better health
-                        through innovative water technology since 2010.</p>
+                        through innovative water technology since 2023.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
@@ -354,7 +354,7 @@
             </div>
 
             <div class="copyright">
-                <p>&copy; 2023 S.P Goswami. All rights reserved. Enagic® and Kangen Water® are registered
+                <p>&copy; 2025 S.P Goswami. All rights reserved. Enagic® and Kangen Water® are registered
                     trademarks of Enagic Co., Ltd.</p>
             </div>
         </div>
