--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <input type="hidden" name="_captcha" value="false">
 
                         <!-- Redirect back to home -->
-                        <input type="hidden" name="_next" value="http://localhost:5500">
+                        <input type="hidden" name="_next" value="https://sajjanpuri.github.io/info/">
 
                         <div class="form-group">
                             <label for="product">Product Interest</label>
